[gd_scene load_steps=18 format=2]

[ext_resource path="res://Battle System/Opponent_info/Enemy_Textures.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/1_background/Forest.png" type="Texture" id=2]
[ext_resource path="res://Battle System/Opponent_info/WildCreature_func.gd" type="Script" id=3]
[ext_resource path="res://Battle System/Opponent_info/Enemy_func.gd" type="Script" id=4]
[ext_resource path="res://Info/Npcs/Dialogue_Box.tscn" type="PackedScene" id=5]
[ext_resource path="res://Battle System/Opponent_info/Opponent_info.tscn" type="PackedScene" id=6]
[ext_resource path="res://Info/Player_info/Player_info.tscn" type="PackedScene" id=7]
[ext_resource path="res://Info/Player_info/Player_func.gd" type="Script" id=8]
[ext_resource path="res://Info/Npcs/Tween.gd" type="Script" id=9]
[ext_resource path="res://Info/Player_info/Player_Textures.tscn" type="PackedScene" id=10]
[ext_resource path="res://Battle System/Opponent_info/Wild_Textures.tscn" type="PackedScene" id=11]
[ext_resource path="res://Info/soul_remnants/Sr_in_battle.tscn" type="PackedScene" id=12]
[ext_resource path="res://Battle System/battle_storage/Button_Battle.tscn" type="PackedScene" id=13]
[ext_resource path="res://Battle System/battle_storage/Menu_func.gd" type="Script" id=14]
[ext_resource path="res://BattleSystem_Scripts/Battle_system_func.gd" type="Script" id=15]
[ext_resource path="res://Battle System/battle_storage/Menu_func.gd" type="Script" id=16]


[sub_resource type="Theme" id=1]

[node name="In Battle" type="Node"]

[node name="Batttle" type="TextureRect" parent="."]
margin_left = 3.05176e-05
margin_top = 1.0
margin_right = 1080.0
margin_bottom = 481.0
rect_scale = Vector2( 2.13, 2.23 )
texture = ExtResource( 2 )
script = ExtResource( 15 )

[node name="Tween" type="Tween" parent="Batttle"]
script = ExtResource( 9 )

[node name="Player" type="Position2D" parent="Batttle"]
script = ExtResource( 8 )

[node name="SoulRemnant" type="Position2D" parent="Batttle/Player"]

[node name="SR_stats" parent="Batttle/Player" instance=ExtResource( 7 )]

[node name="N_pc" parent="Batttle/Player" instance=ExtResource( 10 )]

[node name="Enemy" type="Position2D" parent="Batttle"]
script = ExtResource( 4 )

[node name="SoulRemnant" type="Position2D" parent="Batttle/Enemy"]

[node name="SR_stats" parent="Batttle/Enemy" instance=ExtResource( 6 )]

[node name="N_pc" parent="Batttle/Enemy" instance=ExtResource( 1 )]

[node name="WildCreature" type="Position2D" parent="Batttle"]
visible = false
script = ExtResource( 3 )

[node name="SoulRemnant" type="Position2D" parent="Batttle/WildCreature"]

[node name="SR_stats" parent="Batttle/WildCreature" instance=ExtResource( 6 )]

[node name="W_textures" parent="Batttle/WildCreature" instance=ExtResource( 11 )]
scale = Vector2( 1, 1 )

[node name="Dialogue" parent="Batttle" instance=ExtResource( 5 )]

[node name="Enemy_info" type="MenuButton" parent="Batttle"]
margin_left = 305.164
margin_top = 153.363
margin_right = 336.164
margin_bottom = 191.363
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 1 )
toggle_mode = false
switch_on_hover = true

[node name="Ally_info" type="MenuButton" parent="Batttle"]
margin_left = 109.39
margin_top = 169.058
margin_right = 154.39
margin_bottom = 217.058
focus_mode = 2
toggle_mode = false

[node name="Battle_Buttons" type="PanelContainer" parent="Batttle"]
margin_left = 6.99999
margin_top = 6.55157
margin_right = 21.0
margin_bottom = 20.5516
script = ExtResource( 14 )
menu_items = [ NodePath("Grid/M/container/xContainer/Attack_Button"), NodePath("Grid/M/container/xContainer2/Swap_Button"), NodePath("Grid/M/container/xContainer3/Player_Guard"), NodePath("Grid/M/container/xContainer4/Inventory_Button"), NodePath("Grid/M/container/xContainer5/Escape_Button") ]

[node name="Grid" type="GridContainer" parent="Batttle/Battle_Buttons"]
margin_left = 7.0
margin_top = 7.0
margin_right = 208.0
margin_bottom = 21.0

[node name="M" type="MarginContainer" parent="Batttle/Battle_Buttons/Grid"]
margin_right = 201.0
margin_bottom = 14.0

[node name="container" type="HBoxContainer" parent="Batttle/Battle_Buttons/Grid/M"]
margin_right = 201.0
margin_bottom = 14.0

[node name="xContainer" type="VBoxContainer" parent="Batttle/Battle_Buttons/Grid/M/container"]
margin_right = 37.0
margin_bottom = 14.0

[node name="Attack_Button" parent="Batttle/Battle_Buttons/Grid/M/container/xContainer" instance=ExtResource( 13 )]
margin_right = 37.0
margin_bottom = 14.0

[node name="xContainer2" type="VBoxContainer" parent="Batttle/Battle_Buttons/Grid/M/container"]
margin_left = 41.0
margin_right = 78.0
margin_bottom = 14.0

[node name="Swap_Button" parent="Batttle/Battle_Buttons/Grid/M/container/xContainer2" instance=ExtResource( 13 )]
margin_right = 37.0
margin_bottom = 14.0

[node name="xContainer3" type="VBoxContainer" parent="Batttle/Battle_Buttons/Grid/M/container"]
margin_left = 82.0
margin_right = 119.0
margin_bottom = 14.0

[node name="Player_Guard" parent="Batttle/Battle_Buttons/Grid/M/container/xContainer3" instance=ExtResource( 13 )]
margin_right = 37.0
margin_bottom = 14.0

[node name="xContainer4" type="VBoxContainer" parent="Batttle/Battle_Buttons/Grid/M/container"]
margin_left = 123.0
margin_right = 160.0
margin_bottom = 14.0

[node name="Inventory_Button" parent="Batttle/Battle_Buttons/Grid/M/container/xContainer4" instance=ExtResource( 13 )]
margin_right = 37.0
margin_bottom = 14.0

[node name="xContainer5" type="VBoxContainer" parent="Batttle/Battle_Buttons/Grid/M/container"]
margin_left = 164.0
margin_right = 201.0
margin_bottom = 14.0

[node name="Escape_Button" parent="Batttle/Battle_Buttons/Grid/M/container/xContainer5" instance=ExtResource( 13 )]
margin_right = 37.0
margin_bottom = 14.0

[node name="Inventory" type="PanelContainer" parent="Batttle"]
visible = false
margin_left = -1.43275e-05
margin_top = -0.44843
margin_right = 14.0
margin_bottom = 13.5516
script = ExtResource( 16 )

[node name="Grid" type="GridContainer" parent="Batttle/Inventory"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 7.0

[node name="M" type="MarginContainer" parent="Batttle/Inventory/Grid"]

[node name="container" type="VBoxContainer" parent="Batttle/Inventory/Grid/M"]

[node name="Attacks_menu" type="PanelContainer" parent="Batttle"]
visible = false
margin_right = 14.0
margin_bottom = 14.0
script = ExtResource( 16 )

[node name="Grid" type="GridContainer" parent="Batttle/Attacks_menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 7.0

[node name="M" type="MarginContainer" parent="Batttle/Attacks_menu/Grid"]

[node name="container" type="VBoxContainer" parent="Batttle/Attacks_menu/Grid/M"]

[node name="Options_Menu" type="PanelContainer" parent="Batttle"]
visible = false
margin_right = 14.0
margin_bottom = 14.0
script = ExtResource( 16 )
menu_items = [ NodePath("Grid/M/container/yes"), NodePath("Grid/M/container/no") ]

[node name="Grid" type="GridContainer" parent="Batttle/Options_Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 44.0
margin_bottom = 39.0

[node name="M" type="MarginContainer" parent="Batttle/Options_Menu/Grid"]
margin_right = 37.0
margin_bottom = 32.0

[node name="container" type="VBoxContainer" parent="Batttle/Options_Menu/Grid/M"]
margin_right = 37.0
margin_bottom = 32.0

[node name="yes" parent="Batttle/Options_Menu/Grid/M/container" instance=ExtResource( 13 )]
margin_right = 37.0
margin_bottom = 14.0

[node name="no" parent="Batttle/Options_Menu/Grid/M/container" instance=ExtResource( 13 )]
margin_top = 18.0
margin_right = 37.0
margin_bottom = 32.0

[node name="Sr_in_battle" parent="Batttle" instance=ExtResource( 12 )]
visible = false
